force-app/main/default/objects/HomePageLink__c/HomePageLink__c.object-meta.xml
<CustomObject>
    <label>HomePageLink</label>
    <nameField>
        <label>HomePageLink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HomePageLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>