force-app/main/default/objects/HomePageLink__c/fields/Component_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Component_Rich_Text__c</fullName>
    <label>Component Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>