force-app/main/default/objects/HomePageLink__c/fields/Component_Title__c.field-meta.xml
<CustomField>
    <fullName>Component_Title__c</fullName>
    <description>The name that will actually appear in the selection of link categories when dragging and dropping the Home Page Links component in Lightning App Builder.</description>
    <label>Component Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>