force-app/main/default/objects/HomePageLink__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Built By BW March 2018</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>